# localmap_creator

./: .gitignore  .rosinstall  CMakeLists.txt  Dockerfile  README.md  package.xml
.github/workflows/: main.yml
config/: localmap.rviz
include/localmap_creator/: hokuyo_raycast.h  simple_localmap_creator.h  virtual_road_projector.h
launch/: camera_tf.launch  hayata.launch  localmap_creater.launch  localmap_creator.launch  making_localmap.launch  test.launch  tf.launch
src/: all_pc_to_occupancygrid.cpp  depth2point.cpp  downsample_and_transform.cpp  downsample_vox_and_transform.cpp  ground_and_obstacles_to_grid.cpp  hokuyo_raycast.cpp  hokuyo_raycast_node.cpp  making_localmap.cpp  making_localmap_.cpp  making_localmap_neo.cpp  occupancygrid_integrate.cpp  pc_extractor.cpp  pc_frameid_renamer.cpp  pc_ground_store.cpp  pc_integrater.cpp  pc_merger.cpp  pc_transform.cpp  pcl_merger.cpp  realsense_curvature.cpp  realsense_object.cpp  realsense_outlier_removal_filter.cpp  realsense_to_grid.cpp  removal_filter.cpp  scan2pcl.cpp  simple_localmap_creator.cpp  virtual_road_projector.cpp
test/: localmap_creater.test  localmap_creater_test.cpp  localmap_creator.test  localmap_creator_test.cpp  making_localmap.test  making_localmap_test.cpp
