<?xml version="1.0"?>
<package format="3">
  <name>localmap_creator</name>
  <version>0.0.0</version>
  <description>The localmap_creator package</description>

  <maintainer email="amslab@meiji.ac.jp">amsl</maintainer>


  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>laser_geometry</depend>
  <depend>image_geometry</depend>
  <depend>image_transport</depend>
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf_conversions</depend>
  <depend>cv_bridge</depend>
  <depend>libpcl-all-dev</depend>
  <depend>pcl_ros</depend>

  <build_depend>amsl_navigation_msgs</build_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
